--- a/Presentacion/App.config
+++ b/Presentacion/App.config
@@ -20,8 +20,8 @@
 		<add name="DentalSysMySql"
 			 connectionString="Server=localhost;
                            Database=consultoriodental;
-                           Uid=reborGU;
-                           Pwd=lista13;
+                           Uid=root;
+                           Pwd=HARDflip3.;
                            SslMode=Disabled;
                            AllowUserVariables=True;AllowPublicKeyRetrieval=True;"
 			 providerName="MySql.Data.MySqlClient" />
