Se agrega logica al boton factura Admin

--- a/Presentacion/App.config
+++ b/Presentacion/App.config
@@ -9,10 +9,10 @@
 	<connectionStrings>
 		<!-- Conexion SQL Server -->
 		<add name="DentalSysSqlServer"
-			 connectionString="Data Source=DESKTOP-6KS04K2\REBORGU;
+			 connectionString="Data Source=DANIEL-CASTRO\DANIELCASTRO;
                        Initial Catalog=ConsultorioDental;
                        User ID=sa;
-                       Password=lista13;
+                       Password=1416;
                        TrustServerCertificate=True"
 			 providerName="Microsoft.Data.SqlClient" />
 
@@ -21,7 +21,7 @@
 			 connectionString="Server=localhost;
                            Database=consultoriodental;
                            Uid=root;
-                           Pwd=HARDflip3.;
+                           Pwd=1416;
                            SslMode=Disabled;
                            AllowUserVariables=True;AllowPublicKeyRetrieval=True;"
 			 providerName="MySql.Data.MySqlClient" />
